[workspace]
members = ["tusks", "tusks-lib", "tusks-macro", "tusks-tasks", "tusks-test"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "2.0.0"
authors = ["Benjamin Schnitzler"]
license = "MIT"
repository = "https://github.com/bschnitz/tusks"

[workspace.dependencies]
tusks-macro = { version = "2.0.0", path = "tusks-macro" }
tusks-lib = { version = "2.0.0", path = "tusks-lib" }
tusks-tasks = { version = "2.0.0", path = "tusks-tasks" }
tusks = { version = "2.0.0", path = "tusks" }

clap = "4.5.53"
indexmap = "2.12.1"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = "2.0.108"
unicode-width = "0.2.2"

assert_cmd = "2.1.1"
predicates = "3.1.3"
